k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: internal-app
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: web-service
  template:
    metadata:
      labels:
        app: web-service
    spec:
      containers:
        - name: web-node
          image: nginx:alpine
          ports:
            - containerPort: 80
          resources:
            limits:
              memory: "64Mi"
            requests:
              memory: "32Mi"
          volumeMounts:
            - name: html-volume
              mountPath: /usr/share/nginx/html/index.html #  Point directly to the exact file path
              subPath: index.html #  Force mount this specific subPath key to overwrite the target file
      volumes:
        - name: html-volume
          configMap:
            name: website-content
