k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: internal-app-service
  namespace: default
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: web-service
