k8s/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: portfolio-ingress
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    traefik.ingress.kubernetes.io/router.middlewares: "traefik-redirectscheme@kuberdns"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - akhavanpour.com
        - ://akhavanpour.com
      secretName: akhavanpour-com-tls
  rules:
    - host: akhavanpour.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web-service
                port:
                  number: 80
    - host: ://akhavanpour.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web-service
                port:
                  number: 80
